adgusted index.html and style.css to custom way

--- a/index.html
+++ b/index.html
@@ -6,34 +6,49 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Your Name</title>
+    <title>Martin Mugo Portfolio</title>
 </head>
 <body>
     <div class="grid-2">
         <div class="section-1">
+            <img class="profile-image" src="./assets/me.jpg" alt="profile image">
             <i class="fas fa-code fa-5x white"></i>
-            <h2>FirstName LastName</h2>
-            <p>City,Country.</p>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
+            <h2>Martin Mugo</h2>
+            <p>Nairobi, Kenya.</p>
+            <a href="https://twitter.com/matomugo60"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/in/martin-mugo-a140b122b"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/matomugo60"><i class="fab fa-github"></i></a>
         </div>
         <div class="section-2">
             <h2>About</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quas sint et nihil iusto eius nostrum sit error, repellat optio quisquam! Magnam dolore iusto cumque. Nostrum error iste neque maiores.</p>
-            <h2>Experience</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem.</p>
+            <p>Hello, I'm Martin Mugo - a full-stack software developer with expertise in both front-end and back-end technologies. 
+                 I am passionate about creating seamless and user-friendly web applications that are aesthetically pleasing and responsive.
+                  As a constant learner, I keep myself up-to-date with the latest trends and technologies to ensure that my solutions are modern and scalable. 
+                  When I'm not coding, you can find me traveling, exploring new cultures and cuisines, or indulging in a good book.</p>
+            <!-- <h2>Experience</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem.</p> -->
 
             <h2>Skills</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem obcaecati excepturi! Cupiditate eaque itaque magni voluptatibus neque nobis est dolor? Atque sunt minus ipsa asperiores. At.</p>
+            <p>I have extensive knowledge and experience in front-end development, particularly in HTML, CSS, JavaScript, React, and Redux. 
+                I have a keen eye for design and a passion for creating visually appealing and responsive user interfaces. 
+                Additionally, I am proficient in back-end development using Ruby on Rails and have experience working with databases such as SQLite3 and PostgreSQL.
+                 I am skilled in implementing RESTful APIs and integrating them with front-end applications.
+                  I also have experience with Git and version control.
+                   My skills allow me to create web applications that are not only functional but also aesthetically pleasing, responsive, and user-friendly.</p>
             <h2>Projects</h2>
-            <a href="#">Project 1</a>
-            <a href="#">Project 2</a>
+            <a href="https://github.com/levy-web/farmart">
+                <img src="./assets/farmart.png" alt="Farmart WebApp">
+                Farmart E-Commerce App
+              </a>
+              
+
+
+            <!-- <a href="#">Project 2</a>
             <a href="#">Project 3</a>
             <a href="#">Project 4</a>
-            <a href="#">Project 5</a>
+            <a href="#">Project 5</a> -->
             <h2>Contact</h2>
-            <p>myEmail@email.com</p>
+            <p>matomugo60@gmail.com</p>
         </div>
     </div>
 </body>
