--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <title>Martin Mugo Portfolio</title>
 </head>
 <body>
+    <nav class="navbar">
+        <a href="#about">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+    </nav>
     <div class="grid-2">
         <div class="section-1">
             <img class="profile-image" src="./assets/me.jpg" alt="profile image">
@@ -20,7 +26,7 @@
             <a href="https://github.com/matomugo60"><i class="fab fa-github"></i></a>
         </div>
         <div class="section-2">
-            <h2>About</h2>
+            <h2 id="about">About</h2>
             <p>Hello, I'm Martin Mugo - a full-stack software developer with expertise in both front-end and back-end technologies. 
                  I am passionate about creating seamless and user-friendly web applications that are aesthetically pleasing and responsive.
                   As a constant learner, I keep myself up-to-date with the latest trends and technologies to ensure that my solutions are modern and scalable. 
@@ -28,14 +34,14 @@
             <!-- <h2>Experience</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem.</p> -->
 
-            <h2>Skills</h2>
+            <h2 id="skills">Skills</h2>
             <p>I have extensive knowledge and experience in front-end development, particularly in HTML, CSS, JavaScript, React, and Redux. 
                 I have a keen eye for design and a passion for creating visually appealing and responsive user interfaces. 
                 Additionally, I am proficient in back-end development using Ruby on Rails and have experience working with databases such as SQLite3 and PostgreSQL.
                  I am skilled in implementing RESTful APIs and integrating them with front-end applications.
                   I also have experience with Git and version control.
                    My skills allow me to create web applications that are not only functional but also aesthetically pleasing, responsive, and user-friendly.</p>
-            <h2>Projects</h2>
+            <h2 id="projects">Projects</h2>
             <a href="https://github.com/levy-web/farmart">
                 <img src="./assets/farmart.png" alt="Farmart WebApp">
                 Farmart E-Commerce App
@@ -47,7 +53,7 @@
             <a href="#">Project 3</a>
             <a href="#">Project 4</a>
             <a href="#">Project 5</a> -->
-            <h2>Contact</h2>
+            <h2 id="contact">Contact</h2>
             <p>matomugo60@gmail.com</p>
         </div>
     </div>
