updated new information

--- a/index.html
+++ b/index.html
@@ -46,12 +46,21 @@
                 <img src="./assets/farmart.png" alt="Farmart WebApp">
                 Farmart E-Commerce App
               </a>
+              <a href="https://github.com/matomugo60/weather-app-react">
+                <img src="./assets/Weatherapp.png" alt="WeatherApp">
+                Weather App
+              </a>
+              <a href="https://github.com/matomugo60/td-api">
+                <img src="./assets/todoserver.png" alt="To-Do">
+                To-Do Server
+              </a>
             <!-- <a href="#">Project 2</a>
             <a href="#">Project 3</a>
             <a href="#">Project 4</a>
             <a href="#">Project 5</a> -->
             <h2 id="contact">Contact</h2>
-            <p>matomugo60@gmail.com</p>
+            <p>Email:matomugo60@gmail.com</p>
+            <p>Mobile Contact:+254728753092</p>
         </div>
     </div>
 </body>
