--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
                 <img src="./assets/todoserver.png" alt="To-Do">
                 To-Do Server
               </a>
+              <a href="https://github.com/matomugo60/quiz-app-typescript">
+                <img src="./assets/quizapp.png" alt="To-Do">
+                Quiz App
+              </a>
             <!-- <a href="#">Project 2</a>
             <a href="#">Project 3</a>
             <a href="#">Project 4</a>
